--- a/src/Weikio.NugetDownloader/Weikio.NugetDownloader.csproj
+++ b/src/Weikio.NugetDownloader/Weikio.NugetDownloader.csproj
@@ -5,14 +5,15 @@
     <IsPackable>true</IsPackable>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Description>Tool for downloading and installing NuGet packages from .NET.</Description>
-    <PackageDescription>NuGet catalog for Plugin Framework allows you to use NuGet packages as plugins with Plugin Framework.</PackageDescription>
+    <PackageDescription>Tool for downloading and installing NuGet packages from .NET.</PackageDescription>
     <PackageId>Weikio.NugetDownloader</PackageId>
     <Product>Weikio.NugetDownloader</Product>
     <AssemblyName>Weikio.NugetDownloader</AssemblyName>
     <PackageTags>nuget;plugins;addons;extensions;plugin framework</PackageTags>
-    <PackageIcon>logo_256.png</PackageIcon>
-    <Title>NuGet Catalog for Plugin Framework</Title>
+    <Title>NuGet Downloader</Title>
     <RepositoryUrl>https://github.com/weikio/NugetDownloader</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/weikio/NugetDownloader</PackageProjectUrl>
+	
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,12 +22,7 @@
     <PackageReference Include="NuGet.ProjectModel" Version="5.6.0" />
     <PackageReference Include="NuGet.Protocol" Version="5.6.0" />
     <PackageReference Include="NuGet.Resolver" Version="5.6.0" />
-    <PackageReference Include="MinVer" Version="2.0.*" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.5" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="../../docs/logo_256.png" Pack="true" Visible="false" PackagePath="" />
   </ItemGroup>
   
 </Project>
