--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -11,7 +11,7 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="MinVer" Version="2.0.0" />
+    <PackageReference Include="MinVer" Version="2.0.0" PrivateAssets="all" />
   </ItemGroup>
   
   <ItemGroup>
