--- a/src/Weikio.NugetDownloader/Weikio.NugetDownloader.csproj
+++ b/src/Weikio.NugetDownloader/Weikio.NugetDownloader.csproj
@@ -13,15 +13,13 @@
     <Title>NuGet Downloader</Title>
     <RepositoryUrl>https://github.com/weikio/NugetDownloader</RepositoryUrl>
     <PackageProjectUrl>https://github.com/weikio/NugetDownloader</PackageProjectUrl>
-	
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NuGet.PackageManagement.NetStandard" Version="4.9.2" />
-    <PackageReference Include="NuGet.Packaging.Core" Version="5.6.0" />
-    <PackageReference Include="NuGet.ProjectModel" Version="5.6.0" />
-    <PackageReference Include="NuGet.Protocol" Version="5.6.0" />
-    <PackageReference Include="NuGet.Resolver" Version="5.6.0" />
+    <PackageReference Include="NuGet.PackageManagement" Version="5.9.1" />
+    <PackageReference Include="NuGet.Packaging.Core" Version="5.9.1" />
+    <PackageReference Include="NuGet.ProjectModel" Version="5.9.1" />
+    <PackageReference Include="NuGet.Protocol" Version="5.9.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.5" />
   </ItemGroup>
   
