--- a/src/Weikio.NugetDownloader/Weikio.NugetDownloader.csproj
+++ b/src/Weikio.NugetDownloader/Weikio.NugetDownloader.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFrameworks>netcoreapp3.1;net6.0</TargetFrameworks>
     <IsPackable>true</IsPackable>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Description>Tool for downloading and installing NuGet packages from .NET.</Description>
